{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 51,
  "lineage": "1c419cd3-ae65-c35f-4e46-4d4a5a37f9ee",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.68.144.115",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-06-22T08:35:56.620-07:00",
            "id": "projects/otl-eng-core-share-ops/regions/us-central1/addresses/bastion-staticips-core-share",
            "name": "bastion-staticips-core-share",
            "network_tier": "PREMIUM",
            "project": "otl-eng-core-share-ops",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/regions/us-central1/addresses/bastion-staticips-core-share",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/zones/us-central1-b/instances/bastion-group-manager-q9sh"
            ]
          }
        }
      ]
    },
    {
      "module": "module.re1-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-admins",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-bastion-ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-22T08:36:09.261-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/otl-eng-core-share-ops/global/firewalls/core-share-fw-allow-bastion",
            "name": "core-share-fw-allow-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/networks/core-share",
            "priority": 1000,
            "project": "otl-eng-core-share-ops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/firewalls/core-share-fw-allow-bastion",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "bastion"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "backend"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.re1-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-06-22T08:36:21.620-07:00",
            "deny": [],
            "description": "Allow ingress traffic from internal IP ranges",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/otl-eng-core-share-ops/global/firewalls/core-share-ingress-internal",
            "name": "core-share-ingress-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/networks/core-share",
            "priority": 1000,
            "project": "otl-eng-core-share-ops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/firewalls/core-share-ingress-internal",
            "source_ranges": [
              "10.26.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.re1-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-http",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-22T08:36:21.618-07:00",
            "deny": [],
            "description": "Allow HTTP to machines with the 'http-server' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/otl-eng-core-share-ops/global/firewalls/core-share-ingress-tag-http",
            "name": "core-share-ingress-tag-http",
            "network": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/networks/core-share",
            "priority": 1000,
            "project": "otl-eng-core-share-ops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/firewalls/core-share-ingress-tag-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.re1-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-https",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-22T08:36:20.922-07:00",
            "deny": [],
            "description": "Allow HTTPS to machines with the 'https' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/otl-eng-core-share-ops/global/firewalls/core-share-ingress-tag-https",
            "name": "core-share-ingress-tag-https",
            "network": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/networks/core-share",
            "priority": 1000,
            "project": "otl-eng-core-share-ops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/firewalls/core-share-ingress-tag-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.re1-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-22T08:36:20.947-07:00",
            "deny": [],
            "description": "Allow SSH to machines with the 'ssh' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/otl-eng-core-share-ops/global/firewalls/core-share-ingress-tag-ssh",
            "name": "core-share-ingress-tag-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/networks/core-share",
            "priority": 1000,
            "project": "otl-eng-core-share-ops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/firewalls/core-share-ingress-tag-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.re1-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom",
      "each": "map",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/otl-eng-core-share-ops/global/networks/core-share",
            "name": "core-share",
            "project": "otl-eng-core-share-ops",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/networks/core-share"
          }
        }
      ]
    },
    {
      "module": "module.network_routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "egress-internet",
          "schema_version": 0,
          "attributes": {
            "description": "Route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/otl-eng-core-share-ops/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/networks/core-share",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "otl-eng-core-share-ops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/routes/egress-internet",
            "tags": [
              "egress-intet"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514
              }
            ],
            "creation_timestamp": "2020-06-22T08:36:09.456-07:00",
            "id": "projects/otl-eng-core-share-ops/regions/us-central1/routers/router-core-share",
            "name": "router-core-share",
            "network": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/networks/core-share",
            "project": "otl-eng-core-share-ops",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/regions/us-central1/routers/router-core-share"
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "otl-eng-core-share-ops/us-central1/router-core-share/cloudnat-core-share",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "cloudnat-core-share",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "otl-eng-core-share-ops",
            "router": "router-core-share",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/regions/us-central1/subnetworks/subnet-priv-re1",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_router.router",
            "module.network.module.subnets.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "us-central1/subnet-priv-re1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-22T08:36:09.306-07:00",
            "description": "This is the Private Subnet",
            "gateway_address": "10.26.1.1",
            "id": "projects/otl-eng-core-share-ops/regions/us-central1/subnetworks/subnet-priv-re1",
            "ip_cidr_range": "10.26.1.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "subnet-priv-re1",
            "network": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/networks/core-share",
            "private_ip_google_access": true,
            "project": "otl-eng-core-share-ops",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/regions/us-central1/subnetworks/subnet-priv-re1"
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-central1/subnet-pub-re1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-22T08:36:09.555-07:00",
            "description": "This is the Public Subnet",
            "gateway_address": "10.26.2.1",
            "id": "projects/otl-eng-core-share-ops/regions/us-central1/subnetworks/subnet-pub-re1",
            "ip_cidr_range": "10.26.2.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "subnet-pub-re1",
            "network": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/networks/core-share",
            "private_ip_google_access": false,
            "project": "otl-eng-core-share-ops",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/regions/us-central1/subnetworks/subnet-pub-re1"
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-east1/subnet-priv-re2",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-22T08:36:09.501-07:00",
            "description": "This is the Private Subnet",
            "gateway_address": "10.26.3.1",
            "id": "projects/otl-eng-core-share-ops/regions/us-east1/subnetworks/subnet-priv-re2",
            "ip_cidr_range": "10.26.3.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "subnet-priv-re2",
            "network": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/networks/core-share",
            "private_ip_google_access": true,
            "project": "otl-eng-core-share-ops",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/regions/us-east1/subnetworks/subnet-priv-re2"
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-east1/subnet-pub-re2",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-22T08:36:09.576-07:00",
            "description": "This is the Public Subnet",
            "gateway_address": "10.26.4.1",
            "id": "projects/otl-eng-core-share-ops/regions/us-east1/subnetworks/subnet-pub-re2",
            "ip_cidr_range": "10.26.4.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "subnet-pub-re2",
            "network": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/global/networks/core-share",
            "private_ip_google_access": false,
            "project": "otl-eng-core-share-ops",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otl-eng-core-share-ops/regions/us-east1/subnetworks/subnet-pub-re2"
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}